--- a/crm/accounts/templates/accounts/navbar.html
+++ b/crm/accounts/templates/accounts/navbar.html
@@ -1,39 +1,19 @@
 {% load static %}
 
-<style>
-  .hello-msg{
-    font-size: 18px;
-    color: aliceblue;
-    margin-right: 20px;
-  }
-</style>
-
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <img src="{% static 'images/logo.png' %}" alt="logo">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="nav-link" href="{% url 'dashboard' %}">
+    <img id="logo" src="{% static 'images/logo1.png' %}">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      {% if request.user.is_staff %}
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'products' %}">products</a>
-        </li>
-      {% else %}
-          <li class="nav-item">
-            <a href="{% url 'account' %}" class="nav-link">Setting</a>
-          </li>
-      {% endif %}
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+      </li>
+      <a class="nav-link" href="{% url 'products' %}">Products</a>
     </ul>
   </div>
-  <span class="hello-msg" >Hello, {{ request.user }}</span>
-  <span><a class="hello-msg" href="{% url 'logout' %}">Logout</a></span>
 </nav>
-
-
-
-
